# OpenGL-CMake

./: .gitignore  CMakeLists.txt  main.cpp  readme.md  run.sh
Adder/: adder.cpp
